Closed
Bug 287021
Opened 21 years ago
Closed 21 years ago
can not build SVG-enabled mozilla on Solaris 9 since cairo landing
Categories
(SeaMonkey :: Build Config, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: Egon.Nijns, Unassigned)
Details
Attachments
(2 files)
|
23.95 KB,
application/octet-stream
|
Details | |
|
264 bytes,
patch
|
tor
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.8a5) Gecko/20050103
Build Identifier:
Here's the relevant part of the build log...
gmake[2]: Leaving directory `/export/home/blabla/mozilla/gfx/cairo/libpixman'
/opt/csw/bin/gmake -C gfx/cairo/cairo install
gmake[2]: Entering directory `/export/home/blabla/mozilla/gfx/cairo/cairo'
gmake[2]: *** Geen regel voor het maken van doel `install'. Stop.
gmake[2]: Leaving directory `/export/home/egon/blabla/mozilla/gfx/cairo/cairo'
gmake[1]: *** [cairo] Fout 2
gmake[1]: Leaving directory `/export/home/blabla/mozilla'
gmake: *** [default] Fout 2
gmake[2]: *** Geen regel voor het maken van doel `install'. Stop.
TRANSLATES TO: No rule to make target `install'. Stop.
I see similar build logs on Seamonkey-Ports for the otaku Depend build (BSD/OS
4.2) and for the monkeypox Depend build (Linux/ppc 2.2.15pre3).
Reproducible: Always
Comment 1•21 years ago
|
||
can you attach the Makefile that's failing to this bug (mozilla/gfx/cairo/Makefile)?
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Reporter | ||
Comment 2•21 years ago
|
||
I can't find "Makefile" in the directory mozilla/gfx/cairo/cairo so I'm
assuming it's configure that is failing here.
I attached "Makefile.in" in the hope it is of any help...
Comment 3•21 years ago
|
||
did you specify an object directory in .mozconfig?
Makefile.in is what lives in CVS (and is the same for everyone, it looks ok to
me). configure /should/ generate the Makefile. if you have an object
directory, it will be in there.
If there is is no Makefile, then you'll need to look at the output from
configure to see why.
| Reporter | ||
Comment 4•21 years ago
|
||
(In reply to comment #3)
> configure /should/ generate the Makefile.
>
> If there is is no Makefile, then you'll need to look at the output from
> configure to see why.
You're right; configure was failing: I was running a small script to set some
environment variables after which configure and then gmake would be started.
Configure failed, but gmake started nevertheless, so I didn't notice configure
had failed...
configure fails with:
config.status: executing depfiles commands
./configure:
PKG_CONFIG_PATH=/export/home/egon/tijdelijk/fullmoz/mozilla_nightly_22mar2005/mozilla/gfx/cairo/libpixman:
is not an identifier
Comment 5•21 years ago
|
||
tor committed a fix for PKG_CONFIG problems yesterday (bug 286980), although it
didn't help monkeypox. can you pull updated CVS and try again?
| Reporter | ||
Comment 6•21 years ago
|
||
tor's fix for the PKG_CONFIG_PATH problem did indeed help me getting past this
configure error.
The main bug (not being able to build svg-enabled mozilla on solaris) is still
not fixed for me though. Since the build is still failing in the cairo subdirs
of the code I'm wondering whether I should leave this bug open and post the new
problems I'm seeing here OR whether I should start a new bug (title would be
similar)...
| Reporter | ||
Comment 7•21 years ago
|
||
To get cairo_xlib_surface.c to compile on Solaris I had to modify cairo-xlib.h
In my tree cairo-xlib.h now includes #include <X11/Xlib.h> right before the
include for <X11/extensions/Xrender.h>, and now cairo compiles fine. See also
the proposed patch, but this probably needs to be fixed in the proper way by
cairo?
I found this solution by looking here:
http://www.mail-archive.com/mono-winforms-list@lists.ximian.com/msg00021.html
AND: http://lists.kde.org/?l=kde-bugs-dist&m=110916771709627&w=2
Attachment #178457 -
Flags: review+
Thanks, checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•