Bug 287021 - cairo solaris bustage.  Patch by Egon.Nijns@bib.kuleuven.ac.be.