gfx/cairo/cairo/src/cairo-xlib.h
@@ -41,6 +41,7 @@
 
 #ifdef  CAIRO_HAS_XLIB_SURFACE
 
+#include <X11/Xlib.h>
 #include <X11/extensions/Xrender.h>
 
 CAIRO_BEGIN_DECLS
